Menu (on index.html) styled (it looks rather ugly on Firefox, that's a Firefox bug)

--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@ ul{
 }
 
 h1{
-    display:inline-block;
+    display:block;
     font-size: 150%
 }
 
@@ -358,4 +358,35 @@ h1{
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+}
+
+.header__button{
+    padding: 1em 1em;
+    text-align: center;
+    border-radius: 0.75em;
+    background-color: var(--themeColor);
+    color: white;
+    border: 2px solid var(--themeColor--l1);
+    font-weight: bold;
+    margin: 0.2em;
+}
+
+.header__button:hover {
+    background-color: white;
+    color: var(--themeColor);
+    cursor: pointer;
+}
+
+.header__menu{
+    padding: 1em 1em;
+    margin: 0.2em;
+    border-radius: 0.75em;
+    border: 2px solid var(--themeColor--l1);
+}
+
+.header__menu:focus{
+    padding: 1em 1em;
+    margin: 0.2em;
+    border-radius: 0.75em;
+    border: 2px solid var(--themeColor--l1);
 }
